Fixed animation and z-index

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -70,7 +70,7 @@
     border: 1px solid vars.$text-color;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 675px) {
     .Menu__icon {
         display: grid;
     }
