--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,3 +8,6 @@ body {
     /* font-family: "Times New Roman", Times, serif; */
     box-sizing: border-box;
 }
+body.disableScroll {
+    overflow: hidden;
+}
